Assignment-main/k8s/base/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-microservice-svc
  namespace: ai-microservice
  labels:
    app: ai-microservice
spec:
  type: ClusterIP
  selector:
    app: ai-microservice
  ports:
    - port: 80
      targetPort: 8000
      name: http
